# Systems2Ex5B

./: CMakeLists.txt  Demo.cpp  Makefile  StudentTest1.cpp  Test.cpp  demo  doctest.h
sources/: AscendingIterator.cpp  LinkedList.cpp  LinkedList.hpp  MagicalContainer.cpp  MagicalContainer.hpp  NodeBase.hpp  NodeInt.cpp  NodeInt.hpp  NodeIntPtr.cpp  NodeIntPtr.hpp  PrimeIterator.cpp  SideCrossIterator.cpp
